# HardCodeHeroesMajorProject

./: Project_Working.md  README.md
Meeting_minutes/: Wednesday_Oct_9th.md
ShapeDetect/: ShapeDetect.cpp
Store Models/: Store_Model_Info.txt
Store Models/1.5 Metre Store Model/: 1.5m store model.txt  model.config  model.sdf
auto_rotate/: CMakeLists.txt
auto_rotate/include/: RotateAfterDistance.hpp
auto_rotate/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
auto_rotate/install/auto_rotate/lib/auto_rotate/: rotate_after_distance
auto_rotate/install/auto_rotate/share/ament_index/resource_index/package_run_dependencies/: auto_rotate
auto_rotate/install/auto_rotate/share/ament_index/resource_index/parent_prefix_path/: auto_rotate
auto_rotate/install/auto_rotate/share/auto_rotate/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
auto_rotate/install/auto_rotate/share/auto_rotate/cmake/: auto_rotateConfig.cmake
auto_rotate/launch/: rotate_after_distance.launch.py
auto_rotate/log/: latest_build
auto_rotate/src/: RotateAfterDistance.cpp  rotate_after_distance.cpp  rotate_after_distance_old.cpp
install/: local_setup 2.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_gazebo/include/: Constants.hpp  InventoryWaypointsNode.hpp  WaypointGenerator.hpp  WaypointManager.hpp
install/turtlebot3_gazebo/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_gazebo
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/launch/: box_world.launch.py  open_track_maze.launch.py  turtlebot3_world.launch.py
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf
install/turtlebot3_gazebo/share/turtlebot3_gazebo/worlds/: box_world.world  open_track_ls.world
install/turtlebot3_navigation/include/turtlebot3_navigation/: Constants.hpp  MapManager.hpp  MotionController.hpp  SensorProcessor.hpp
install/turtlebot3_navigation/lib/turtlebot3_navigation/: turtlebot3_shop_navigator
install/turtlebot3_navigation/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_navigation
install/turtlebot3_navigation/share/turtlebot3_navigation/: local_setup 2.dsv  package 2.bash  package 2.ps1  package 2.sh  package 2.xml  package 2.zsh  package.dsv
install/turtlebot3_navigation/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
install/turtlebot3_navigation2/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_navigation2
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: package.sh
log/: latest_build
shape_detector/: CMakeLists.txt  README.md  detected_shapes.txt  object_positions.txt  package.xml  pygui.py  search_object  search_object.cpp
shape_detector/include/: shape_detector 2.hpp  shape_detector.hpp  shape_detector_utils.hpp
shape_detector/include/shape_detector/: shape_detector.hpp
shape_detector/install/: local_setup.sh
shape_detector/install/shape_detector/lib/shape_detector/: shape_detector
shape_detector/install/shape_detector/share/shape_detector/: package.bash  package.dsv  package.sh  package.zsh
shape_detector/output/: search_object
shape_detector/src/: main.cpp  shape_detector.cpp  shape_detector_utils.cpp
shape_detector2/: detected_shapes.txt
shape_detector2/include/: shape_detector.hpp  shape_detector_utils.hpp
shape_detector2/install/: setup.sh
shape_detector2/install/shape_detector/lib/shape_detector/: shape_detector  shape_detector_node
shape_detector2/install/shape_detector/share/shape_detector/: package.ps1
shape_detector2/src/: main.cpp  shape_detector.cpp  shape_detector_utils.cpp
src/supermarket_navigation/: CMakeLists.txt  package.xml
src/supermarket_navigation/src/: object_positions.txt  pygui.py  save_objects  save_objects.cpp  search_object  search_object.cpp  send_goals.cpp  user_navagation.cpp
turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_gazebo/include/: Constants.hpp  InventoryWaypointsNode.hpp  MainWindow.hpp  MapManager.hpp  MotionController.hpp  SensorProcessor.hpp  WaypointGenerator.hpp  WaypointManager.hpp
turtlebot3_gazebo/launch/: shop_world.launch 2.py  tb3_nav2_params.yaml
turtlebot3_gazebo/src/: InventoryWaypointsNode.cpp  MainWindow.cpp  MapManager.cpp  MotionController.cpp  SensorProcessor.cpp  WaypointGenerator.cpp  WaypointManager.cpp  main.cpp
turtlebot3_gazebo/worlds/: open_track_ls.world  open_track_maze.world  shop_world.world
turtlebot3_navigation/: CMakeLists.txt  package 2.xml  package.xml
turtlebot3_navigation/include/turtlebot3_navigation/: GoalNavigatorNode.hpp  MapManager.hpp  MotionController.hpp  ShopNavAndDriveNode.hpp
turtlebot3_navigation/src/: GoalNavigatorNode.cpp  MapManager.cpp  MotionController.cpp  SensorProcessor.cpp  ShopNavAndDriveNode.cpp  main.cpp
turtlebot3_navigation2/param/: burger.yaml
